Restructure plugin marketplace: consolidate roles/domains, add billy-milligan team plugin
- Consolidate domain plugins (ecommerce, fintech, healthcare, iot) into plugins/domains/
- Consolidate role plugins (aqa, architect, backend, devops, frontend, fullstack, mobile) into plugins/roles/
- Add billy-milligan team plugin with 5 agents, 50 skills, 20 commands, and dual memory system
- Add AI/ML engineering skill to alpha-core
- Add ADR documentation templates
- Update marketplace configuration and README

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>